# vape-decomp-rupload

./: CoolInfoToKnow.md  README.md  WhatNeedsToBeDone.md
VapeDecomp_Final/organized/: inject-vape.sh  setup_tools.sh
VapeDecomp_Final/organized/builds/: deobf
VapeDecomp_Final/organized/builds/vape-ai-deobfuscated/: MAPPINGS.txt  mappings.srg  mappings_classes_only.srg  mappings_clean.srg  mappings_fixed.srg  mappings_unique.srg
VapeDecomp_Final/organized/builds/vape-ai-deobfuscated/decompiled_source/: summary.txt
VapeDecomp_Final/organized/builds/vape-ai-deobfuscated/decompiled_source/a/: A5.java  A6.java  A7.java  A9.java  AA.java  AJ.java  AN.java  B2.java  BF.java  BQ.java  Be.java  Bh.java  Bj.java  Bm.java  Bz.java  C.java  CV.java  C_.java  Cc.java  Cl.java  Cx.java  Cz.java  (+260 more)
VapeDecomp_Final/organized/builds/vape-ai-deobfuscated/temp_decompiled/: summary.txt
VapeDecomp_Final/organized/builds/vape-classes/: mappings.txt
VapeDecomp_Final/organized/builds/vape-classes/resources/: chinese.properties.txt  french.properties.txt  spanish.properties.txt  universal_items.csv
VapeDecomp_Final/organized/launcher/prism/: accounts.json  manifest.txt  metacache  prismlauncher.cfg
VapeDecomp_Final/organized/tools/AIDeobf/: CMakeLists.txt  build.sh  deobf
VapeDecomp_Final/organized/tools/AIDeobf/src/: main.cpp
VapeDecomp_Final/organized/tools/GenericInjector/: run.sh
VapeDecomp_Final/organized/tools/GenericInjector/src/: EnhancedInjector.java
VapeDecomp_Final/organized/tools/UniveralAgent/: SimpleAgent.java  UniversalAgent.java  build.sh  manifest.txt
(+3756 files in other folders)
